# ai-llama-index

./: .gitignore  Dockerfile  README.md  build-docker.sh  build-documentembedding.sh  db_manager.py  des.py  des_alternative.py  document_maker.py  go.sh  img.py  infer.sh  local.sh  main.py  main.sub.py  main.working.py  prompt.sh  pyproject.toml  query.py  requirements.txt  run-docker.sh  run-documentembedding.sh  run-local.sh  run-server.sh  server.sh  smart_prompt.sh  subquestion.py  vis.py  vis_alternative.py  yourtext.txt
old/: CACHE_USAGE.md  README.md  create_embeddings.py  des.py  des_alternative.py  downloader.py  embed_text.py  embeddings.pt  go.sh  prompt.sh  requirements.txt  run_inference.py  run_prompt.py  save_embeddings.py  setup_pytorch.sh  smart_prompt.sh  vis.py  vis_alternative.py
old/src/: __init__.py
old/src/embedder/: __init__.py  model.py  multimodal.py
old/tests/: conftest.py  test_embedder.py
scripts/: run_inference.py  run_prompt.py  run_smart_prompt.py  save_embeddings.py  search_llamaindex.py  vis.py
scripts/__pycache__/: search_llamaindex.py
src/embedder/: multimodal.py
utils/: document_maker.py
