[project]
name = "ai-create-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.121.2",
    "fastembed>=0.7.3",
    "llama-cpp-python>=0.3.16",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-llama-cpp>=0.5.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-vector-stores-faiss>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.8.7",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "test",
]
